# vibe-coding-platform

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.ja.md  README.md  README.zh-CN.md  commitlint.config.cjs  index.html  package-lock.json  package.json  skills-lock.json  vite.config.ts  vitest.config.ts
.claude/commands/: git-push.md
.claude/skills/: skill-designer  vibe-tech-stack-selection
.github/workflows/: ci.yml  release.yml
docs/: cli-upgrade-flow.mmd  linux-do-post.md  release-ci.md  tab-ui-preview.html
docs/reports/: security-audit-2026-07-20.md
docs/规范约束/: README.md
scripts/: verify-updater-bundles.mjs
src/: App.vue  api.ts  autoMode.ts  chatComposerOptions.ts  chatContext.ts  chatInputHistory.ts  chatPermission.ts  chatQuestion.ts  chatSessions.ts  chatSlashActions.ts  chatSystemCommands.ts  chatToolbar.ts  cliEnvStore.ts  codeCopy.ts  codexApplyPatch.ts  codexSideChat.ts  contextUsage.ts  diffHighlight.ts  export.ts  exportHistory.ts  fly.ts  format.ts  gitBranch.ts  globalSearch.ts  i18n.ts  jsonHighlight.ts  liveNotifications.ts  main.ts  mathRender.ts  menu.ts  mermaid.ts  paneActions.ts  paneRegistry.ts  panes.ts  pricing.ts  projectSelection.ts  projectsRefresh.ts  recents.ts  sessionsToolbar.ts  settings.ts  (+16 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: codex_color_probe.rs  test_dedup.rs  verify_stats.rs
src-tauri/icons/: icon.icns
src-tauri/src/: agent_chat.rs  agent_command.rs  bookmarks.rs  claude_config.rs  cli_env.rs  git.rs  lib.rs  main.rs  menu.rs  pty.rs  trash.rs  tray.rs  tray_windows.rs  turn.rs  types.rs  usage_api.rs  util.rs  watch.rs  worktrees.rs
src-tauri/src/agents/: agy.rs  claude.rs  codex.rs  mod.rs  opencode.rs
src-tauri/src/project_factory/: ai_rules.rs  analysis.rs  artifact_plan.rs  context_memory.rs  docs.rs  document_templates.rs  env.rs  existing.rs  initialization.rs  initialization_state.rs  install.rs  inventory.rs  materials.rs  mod.rs  path_guard.rs  scaffold.rs  types.rs
src-tauri/src/stats/: aggregate.rs  classifier.rs  mod.rs  pricing.rs  shell.rs  stream.rs  tray.rs  types.rs
src-tauri/tests/: project_factory.rs
src/components/: AutoModeConfirmModal.vue  ChatComposer.vue  ChatEffortSlider.vue  icons.ts  (+25 more)
test/: App.initializationProgress.test.ts  api.test.ts  autoMode.test.ts  chatComposerOptions.test.ts  chatContext.test.ts  chatInputHistory.test.ts  chatPermission.test.ts  chatQuestion.test.ts  chatSessions.test.ts  chatSlashActions.test.ts  chatSystemCommands.test.ts  chatToolbar.test.ts  codexApplyPatch.test.ts  codexSideChat.test.ts  contextUsage.test.ts  diffHighlight.test.ts  export.test.ts  fly.test.ts  format.test.ts  gitBranch.test.ts  globalSearch.test.ts  i18n.test.ts  jsonHighlight.test.ts  liveNotifications.test.ts  panes.test.ts  projectSelection.test.ts  recents.test.ts  sessionsToolbar.test.ts  settings.test.ts  setup.ts  sideChat.test.ts  stats.test.ts  tabStatus.test.ts  terminals.test.ts  tooltip.test.ts  trashToolbar.test.ts  tsconfig.json  updateCheck.test.ts  usage.test.ts  useDebouncedSearch.test.ts  (+2 more)
(+159 files in other folders)
